More dashboard work, update heading sizes throughout

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,7 +9,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">
+      <h1 class="govuk-heading-l">
         {{serviceName}}
         <span class="govuk-caption-xl">v1</span>
       </h1>
