--- a/app/views/v1/operator-list.html
+++ b/app/views/v1/operator-list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="govuk-grid-row">
-  <h1 class="govuk-heading-xl">Operators</h1>
+  <h1 class="govuk-heading-l">Operators</h1>
 
   <a href="/v1/operator-add" class="govuk-button">Add new operator</a>
 
