--- a/docs/views/privacy-policy.html
+++ b/docs/views/privacy-policy.html
@@ -20,7 +20,7 @@ About - GOV.UK Prototype Kit
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">Privacy policy</h1>
+      <h1 class="govuk-heading-l">Privacy policy</h1>
 
       <p>We collect certain information and data about you when you use the GOV.UK Prototype Kit.</p>
 
