--- a/docs/views/tutorials-and-examples.html
+++ b/docs/views/tutorials-and-examples.html
@@ -17,7 +17,7 @@
 
 {% block content %}
 
-  <h1 class="govuk-heading-xl">Tutorials and examples</h1>
+  <h1 class="govuk-heading-l">Tutorials and examples</h1>
 
   <div class="govuk-grid-row">
 
