--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -22,12 +22,47 @@ $govuk-assets-path: '/govuk/assets/';
 .govuk-header__nav .govuk-header__nav-link {
   text-decoration: none;
   color: #fff;
-  margin-left: 24px;
+  margin-left: 20px;
   display: inline-block;
   line-height: 30px;
 
   &:hover,
   &:focus {
     text-decoration: underline;
+  }
+}
+
+.govuk-cards::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.govuk-cards__item {
+  box-sizing: border-box;
+
+  @include govuk-media-query($until: tablet) {
+    margin-bottom: 20px;
+  }
+
+  @include govuk-media-query($from: tablet) {
+    float: left;
+    margin-bottom: 40px;
+  }
+
+  @include govuk-media-query($from: desktop) {
+    width: 33.333333%;
+
+    &:not(:nth-child(3n+3)) {
+      padding-right: 20px;
+    }
+  }
+
+  @include govuk-media-query($from: tablet, $until: desktop) {
+    width: 50%;
+
+    &:not(:nth-child(2n+2)) {
+      padding-right: 15px;
+    }
   }
 }
