--- a/app/views/v1/organisation-list.html
+++ b/app/views/v1/organisation-list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="govuk-grid-row">
-  <h1 class="govuk-heading-xl">Organisations</h1>
+  <h1 class="govuk-heading-l">Organisations</h1>
 
   <a href="/v1/organisation-add" class="govuk-button">Add new organisation</a>
 
