--- a/app/views/v1/service-list.html
+++ b/app/views/v1/service-list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="govuk-grid-row">
-  <h1 class="govuk-heading-xl">Services</h1>
+  <h1 class="govuk-heading-l">Services</h1>
 
   <a href="/v1/service-add" class="govuk-button">Add new service</a>
 
