--- a/app/views/v1/user-list.html
+++ b/app/views/v1/user-list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="govuk-grid-row">
-  <h1 class="govuk-heading-xl">Users</h1>
+  <h1 class="govuk-heading-l">Users</h1>
 
   <a href="/v1/user-add" class="govuk-button">Add new user</a>
 
