--- a/docs/views/about.html
+++ b/docs/views/about.html
@@ -19,17 +19,17 @@ About - GOV.UK Prototype Kit
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">About</h1>
+      <h1 class="govuk-heading-l">About</h1>
 
       <p class="govuk-body-l">
         The GOV.UK Prototype Kit provides a simple way to make interactive prototypes that look like pages on GOV.UK. These prototypes can be used to show ideas to people you work with, and to do user research
       </p>
-      
+
       <h2 class="govuk-heading-m">Support</h2>
-      
+
       <p>The GOV.UK Prototype Kit is maintained by the Government Digital Service. If you’ve got a question or need support you can:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>email 
+        <li>email
           <a href="mailto:govuk-design-system-support@digital.cabinet-office.gov.uk" class="govuk-link">
             govuk-design-system-support@digital.cabinet-office.gov.uk
           </a>
@@ -37,7 +37,7 @@ About - GOV.UK Prototype Kit
         <li>
           <a href="https://ukgovernmentdigital.slack.com/messages/prototype-kit" class="govuk-link">
             get in touch on Slack
-          </a> 
+          </a>
           (<a class="govuk-link" href="slack://channel?team=T04V6EBTR&amp;id=C0647LW4R">open in app</a>)
         </li>
         <li>
@@ -48,13 +48,13 @@ About - GOV.UK Prototype Kit
       </ul>
 
       <h2 class="govuk-heading-m">Contributing</h2>
-      
+
       <p>If you’ve got an idea or suggestion you can:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>
           <a href="https://ukgovernmentdigital.slack.com/messages/prototype-kit-dev" class="govuk-link">
             get in touch on the developer Slack channel
-          </a> 
+          </a>
           (<a class="govuk-link" href="slack://channel?team=T04V6EBTR&amp;id=C0E1063DW">open in app</a>)
         </li>
         <li>
