--- a/docs/views/examples/branching/index.html
+++ b/docs/views/examples/branching/index.html
@@ -15,7 +15,7 @@
 
       <form action="/docs/examples/branching/over-18-answer" method="post" class="form">
 
-        <h1 class="govuk-heading-xl">
+        <h1 class="govuk-heading-l">
           Branching
         </h1>
 
