--- a/docs/views/install.html
+++ b/docs/views/install.html
@@ -20,7 +20,7 @@ Getting started - GOV.UK Prototype Kit
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">Installing the kit</h1>
+      <h1 class="govuk-heading-l">Installing the kit</h1>
 
       <p class="govuk-body-l">
         Get up and running with the kit in 30 minutes.
