--- a/docs/views/templates/blank-unbranded.html
+++ b/docs/views/templates/blank-unbranded.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-  <h1 class="govuk-heading-xl">
+  <h1 class="govuk-heading-l">
     Example without GOV.UK branding
   </h1>
   <p class="govuk-body-l">
