--- a/docs/views/templates/content.html
+++ b/docs/views/templates/content.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">
+      <h1 class="govuk-heading-l">
         Heading goes here
       </h1>
 
