--- a/app/views/v1/user-list.html
+++ b/app/views/v1/user-list.html
@@ -1,9 +1,8 @@
 {% extends "layout.html" %}
 
-{% block pageTitle %}{% endblock %}
+{% block pageTitle %}Users - {{serviceName}}{% endblock %}
 
 {% block content %}
-<div class="govuk-grid-row">
   <h1 class="govuk-heading-l">Users</h1>
 
   <a href="/v1/user-add" class="govuk-button">Add new user</a>
@@ -29,7 +28,7 @@
     rows: [
       [
         {
-          html: '<a href="/v1/user-edit" class="govuk-link">David Batty</a>'
+          html: '<a href="/v1/user-view" class="govuk-link">David Batty</a>'
         },
         {
           html: '<a href="mailto:david.batty@leedsutd.co.uk" class="govuk-link">david.batty@leedsutd.co.uk</a>'
@@ -43,7 +42,7 @@
       ],
       [
         {
-          html: '<a href="/v1/user-edit" class="govuk-link">Gary Speed</a>'
+          html: '<a href="/v1/user-view" class="govuk-link">Gary Speed</a>'
         },
         {
           html: '<a href="mailto:gary.speed@leedsutd.co.uk" class="govuk-link">gary.speed@leedsutd.co.uk</a>'
@@ -57,7 +56,7 @@
       ],
       [
         {
-          html: '<a href="/v1/user-edit" class="govuk-link">Gordon Strachan</a>'
+          html: '<a href="/v1/user-view" class="govuk-link">Gordon Strachan</a>'
         },
         {
           html: '<a href="mailto:gordon.strachan@leedsutd.co.uk" class="govuk-link">gordon.strachan@leedsutd.co.uk</a>'
@@ -71,7 +70,7 @@
       ],
       [
         {
-          html: '<a href="/v1/user-edit" class="govuk-link">Gary McAllister</a>'
+          html: '<a href="/v1/user-view" class="govuk-link">Gary McAllister</a>'
         },
         {
           html: '<a href="mailto:gary.mcallister@leedsutd.co.uk" class="govuk-link">gary.mcallister@leedsutd.co.uk</a>'
@@ -85,7 +84,7 @@
       ],
       [
         {
-          html: '<a href="/v1/user-edit" class="govuk-link">Tony Dorigo</a>'
+          html: '<a href="/v1/user-view" class="govuk-link">Tony Dorigo</a>'
         },
         {
           html: '<a href="mailto:tony.dorigo@leedsutd.co.uk" class="govuk-link">tony.dorigo@leedsutd.co.uk</a>'
@@ -99,7 +98,7 @@
       ],
       [
         {
-          html: '<a href="/v1/user-edit" class="govuk-link">Mel Sterland</a>'
+          html: '<a href="/v1/user-view" class="govuk-link">Mel Sterland</a>'
         },
         {
           html: '<a href="mailto:mel.sterland@leedsutd.co.uk" class="govuk-link">mel.sterland@leedsutd.co.uk</a>'
@@ -113,7 +112,7 @@
       ],
       [
         {
-          html: '<a href="/v1/user-edit" class="govuk-link">Some Dude</a>'
+          html: '<a href="/v1/user-view" class="govuk-link">Some Dude</a>'
         },
         {
           html: '<a href="mailto:some.dude@leedsutd.co.uk" class="govuk-link">some.dude@leedsutd.co.uk</a>'
@@ -127,5 +126,4 @@
       ]
     ]
   }) }}
-</div>
 {% endblock %}
