--- a/app/views/v1/operator-list.html
+++ b/app/views/v1/operator-list.html
@@ -33,7 +33,7 @@
     rows: [
       [
         {
-          html: '<a href="/v1/operator-edit" class="govuk-link">Health</a>'
+          html: '<a href="/v1/dashboard-operators" class="govuk-link">Health</a>'
         },
         {
           html: '<a href="/v1/service-list" class="govuk-link">4</a>',
@@ -50,7 +50,7 @@
       ],
       [
         {
-          html: '<a href="/v1/operator-edit" class="govuk-link">State Pension</a>'
+          html: '<a href="/v1/dashboard-operators" class="govuk-link">State Pension</a>'
         },
         {
           html: '<a href="/v1/service-list" class="govuk-link">2</a>',
@@ -67,7 +67,7 @@
       ],
       [
         {
-          html: '<a href="/v1/operator-edit" class="govuk-link">Universal Credit</a>'
+          html: '<a href="/v1/dashboard-operators" class="govuk-link">Universal Credit</a>'
         },
         {
           html: '<a href="/v1/service-list" class="govuk-link">8</a>',
@@ -84,7 +84,7 @@
       ],
       [
         {
-          html: '<a href="/v1/operator-edit" class="govuk-link">Operator Name</a>'
+          html: '<a href="/v1/dashboard-operators" class="govuk-link">Operator Name</a>'
         },
         {
           html: '<a href="/v1/service-list" class="govuk-link">1</a>',
@@ -101,7 +101,7 @@
       ],
       [
         {
-          html: '<a href="/v1/operator-edit" class="govuk-link">Another Operator</a>'
+          html: '<a href="/v1/dashboard-operators" class="govuk-link">Another Operator</a>'
         },
         {
           html: '<a href="/v1/service-list" class="govuk-link">2</a>',
