Add more nav checks, several wording changes

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -53,7 +53,7 @@
       </div>
 
       <nav class="govuk-header__nav">
-        <a href="/v1/user-edit" class="govuk-header__nav-link">Stuart Bamforth</a>
+        <a href="/v1/user-edit--self" class="govuk-header__nav-link">Jane Smith</a>
         <a href="/v1/dashboard-root" class="govuk-header__nav-link">Sign out</a>
       </nav>
     </div>
@@ -66,7 +66,7 @@
       </li>
 
       <li>
-        <a href="/v1/dashboard-operators" {% if activeNav == 'operators' %}class="active" aria-current="page"{% endif %}>Operators</a>
+        <a href="/v1/dashboard-operators" {% if activeNav == 'operators' %}class="active" aria-current="page"{% endif %}>Service groups</a>
       </li>
 
       <li>
