--- a/app/views/v1/dashboard-organisations.html
+++ b/app/views/v1/dashboard-organisations.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<h1 class="govuk-heading-l">Dashboard</h1>
+<h1 class="govuk-heading-l">Dashboard - Organisations</h1>
 
 <div class="govuk-cards">
   <div class="govuk-cards__item govuk-cards__item--dashboard">
