--- a/app/views/v1/operator-confirmation.html
+++ b/app/views/v1/operator-confirmation.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Operator added - {{serviceName}}
+  Service group added - {{serviceName}}
 {% endblock %}
 
 {% block content %}
 <div class="govuk-grid-row">
   {{ govukPanel({
-    titleText: "Operator added",
+    titleText: "Service group added",
     html: "Some additional helpful text here"
   }) }}
 </div>
