--- a/app/views/v1/dashboard-root.html
+++ b/app/views/v1/dashboard-root.html
@@ -1,29 +1,29 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Dashboard - {{serviceName}}
+  Dashboard - System - {{serviceName}}
 {% endblock %}
 
 {% block content %}
-<h1 class="govuk-heading-l">Dashboard</h1>
+<h1 class="govuk-heading-l">Dashboard - System</h1>
 
 <div class="govuk-cards">
   <div class="govuk-cards__item govuk-card--dashboard">
-    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Operators</h2>
+    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Service groups</h2>
 
     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
       <span class="govuk-visually-hidden">There are currently</span>
       5
-      <span class="govuk-visually-hidden">operators in the system</span>
+      <span class="govuk-visually-hidden">service groups in the system</span>
     </p>
 
     <ul class="govuk-list">
       <li>
-        <a href="/v1/operator-add" class="govuk-link">Add new operator</a>
+        <a href="/v1/operator-add" class="govuk-link">Add new service group</a>
       </li>
 
       <li>
-        <a href="/v1/operator-list" class="govuk-link">View all operators</a>
+        <a href="/v1/operator-list" class="govuk-link">View all service groups</a>
       </li>
     </ul>
   </div>
@@ -49,21 +49,21 @@
   </div>
 
   <div class="govuk-cards__item govuk-cards__item--dashboard">
-    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Organisations</h2>
+    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Partner organisations</h2>
 
     <p class="govuk-heading-xl govuk-!-margin-bottom-5">
       <span class="govuk-visually-hidden">There are currently</span>
       6
-      <span class="govuk-visually-hidden">organisations in the system</span>
+      <span class="govuk-visually-hidden">partner organisations in the system</span>
     </p>
 
     <ul class="govuk-list">
       <li>
-        <a href="/v1/organisation-add" class="govuk-link">Add new organisation</a>
+        <a href="/v1/organisation-add" class="govuk-link">Add new partner organisation</a>
       </li>
 
       <li>
-        <a href="/v1/organisation-list" class="govuk-link">View all organisations</a>
+        <a href="/v1/organisation-list" class="govuk-link">View all partner organisations</a>
       </li>
     </ul>
   </div>
