--- a/app/views/v1/service-list.html
+++ b/app/views/v1/service-list.html
@@ -16,11 +16,11 @@
         classes: "govuk-!-width-half"
       },
       {
-        text: "Operator",
+        text: "Service group",
         classes: "govuk-!-width-one-quarter"
       },
       {
-        text: "Organisations",
+        text: "Partner organisations",
         format: "numeric",
         classes: "govuk-!-width-one-quarter"
       },
