--- a/app/views/v1/organisation-confirmation.html
+++ b/app/views/v1/organisation-confirmation.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="govuk-grid-row">
   {{ govukPanel({
-    titleText: "Organisation added",
+    titleText: "Organisation added: " + data["organisation-name"],
     html: "Some additional helpful text here"
   }) }}
 </div>
