--- a/app/views/v1/service-confirmation.html
+++ b/app/views/v1/service-confirmation.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="govuk-grid-row">
   {{ govukPanel({
-    titleText: "Service added",
+    titleText: "Service added: " + data["service-name"],
     html: "Some additional helpful text here"
   }) }}
 </div>
