--- a/app/views/v1/user-edit.html
+++ b/app/views/v1/user-edit.html
@@ -7,92 +7,59 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-half">
-    {{ govukFieldset({
-      legend: {
-        text: "Edit user",
-        classes: "govuk-fieldset__legend--l",
-        isPageHeading: true
-      }
-    }) }}
-
-    {{ govukInput({
-      label: {
-        text: "First name"
-      },
-      id: "user-first-name",
-      name: "user-first-name",
-      value: "Jane"
-    }) }}
-
-    {{ govukInput({
-      label: {
-        text: "Last name"
-      },
-      id: "user-last-name",
-      name: "user-last-name",
-      value: "Smith"
-    }) }}
-
-    {{ govukInput({
-      label: {
-        text: "Phone number"
-      },
-      id: "user-phone-number",
-      name: "user-phone-number",
-      type: "tel",
-      value: "0113 234 567890"
-    }) }}
-
-    {{ govukInput({
-      label: {
-        text: "Email address"
-      },
-      id: "user-email-address",
-      name: "user-email-address",
-      type: "email",
-      value: "jane.smith@organisation.gov"
-    }) }}
-
-    {{ govukRadios({
-      idPrefix: "user-access-rights",
-      name: "user-access-rights",
-      fieldset: {
+    <form action="/v1/user-summary" method="post" class="form">
+      {{ govukFieldset({
         legend: {
-          text: "Access rights",
-          isPageHeading: false
+          text: "Edit user",
+          classes: "govuk-fieldset__legend--l",
+          isPageHeading: true
         }
-      },
-      hint: {
-        html: '<a href="#" target="_blank" rel="noopener noreferrer">More information about access rights<span class="govuk-visually-hidden"> (This link opens in a new window or tab)</span></a>'
-      },
-      items: [
-        {
-          value: "platinum",
-          text: "Platinum"
-        },
-        {
-          value: "gold",
-          text: "Gold"
-        },
-        {
-          value: "silver",
-          text: "Silver"
-        },
-        {
-          value: "bronze",
-          text: "Bronze"
-        },
-        {
-          value: "tin",
-          text: "Tin",
-          checked: true
-        }
-      ]
-    }) }}
+      }) }}
 
-    {{ govukButton({
-      text: "Save changes"
-    }) }}
+      {{ govukInput({
+        label: {
+          text: "First name"
+        },
+        id: "user-first-name",
+        name: "user-first-name",
+        value: data["user-first-name"]
+      }) }}
+
+      {{ govukInput({
+        label: {
+          text: "Last name"
+        },
+        id: "user-last-name",
+        name: "user-last-name",
+        value: data["user-last-name"]
+      }) }}
+
+      {{ govukInput({
+        label: {
+          text: "Phone number"
+        },
+        id: "user-phone-number",
+        name: "user-phone-number",
+        type: "tel",
+        value: data["user-phone-number"]
+      }) }}
+
+      {{ govukInput({
+        label: {
+          text: "Email address"
+        },
+        id: "user-email-address",
+        name: "user-email-address",
+        type: "email",
+        value: data["user-email-address"]
+      }) }}
+
+      {% include "includes/user-access-rights.html" %}
+
+      {{ govukButton({
+        text: "Continue"
+      }) }}
+    </form>
   </div>
 </div>
 {% endblock %}
