--- a/app/views/v1/operator-confirmation.html
+++ b/app/views/v1/operator-confirmation.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="govuk-grid-row">
   {{ govukPanel({
-    titleText: "Service group added",
+    titleText: "Service group added: " + data["operator-name"],
     html: "Some additional helpful text here"
   }) }}
 </div>
